--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flutter_bloc: ^4.0.0
+  equatable: ^1.0.0
+  wave: ^0.0.8
 
 dev_dependencies:
   flutter_test:
