--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  firebase_core: ^0.4.0+8
+  google_sign_in: ^4.0.0
+  firebase_auth: ^0.15.0+1
   flutter_bloc: ^4.0.0
   equatable: ^1.0.0
-  wave: ^0.0.8
+  meta: ^1.1.6
+  rxdart: ^0.23.1
+  font_awesome_flutter: ^8.4.0
 
 dev_dependencies:
   flutter_test:
@@ -42,6 +47,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
